--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "dependencies": {
       "@emotion/react": "^11.10.5",
       "@mantine/core": "^5.10.3",
+      "@mantine/form": "^5.10.4",
       "@mantine/hooks": "^5.10.3",
       "@tabler/icons-react": "^2.3.0",
       "@testing-library/jest-dom": "^5.14.1",
@@ -14,12 +15,16 @@
       "@types/node": "^16.7.13",
       "@types/react": "^18.0.0",
       "@types/react-dom": "^18.0.0",
+      "axios": "^1.3.3",
+      "jwt-decode": "^3.1.2",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-router-dom": "^6.8.1",
       "react-scripts": "5.0.1",
+      "swr": "^2.0.3",
       "typescript": "^4.4.2",
-      "web-vitals": "^2.1.0"
+      "web-vitals": "^2.1.0",
+      "zustand": "^4.3.3"
    },
    "scripts": {
       "start": "react-scripts start",
