--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
       "@mantine/core": "^5.10.3",
       "@mantine/form": "^5.10.4",
       "@mantine/hooks": "^5.10.3",
+      "@mantine/modals": "^5.10.4",
+      "@mantine/notifications": "^5.10.4",
       "@tabler/icons-react": "^2.3.0",
       "@testing-library/jest-dom": "^5.14.1",
       "@testing-library/react": "^13.0.0",
