--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
       "no-unused-vars": "off",
       "@typescript-eslint/no-empty-function": "off",
       "@typescript-eslint/no-unused-vars": ["warn"],
-      "@typescript-eslint/no-explicit-any": "warn",
+      "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
       "prettier/prettier": "warn",
       "react/jsx-uses-react": "error",
