--- a/package.json
+++ b/package.json
@@ -17,22 +17,20 @@
       "@types/node": "^16.7.13",
       "@types/react": "^18.0.0",
       "@types/react-dom": "^18.0.0",
+      "@vitejs/plugin-react": "^3.1.0",
       "axios": "^1.3.3",
       "jwt-decode": "^3.1.2",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-router-dom": "^6.8.1",
-      "react-scripts": "5.0.1",
       "swr": "^2.0.3",
       "typescript": "^4.4.2",
-      "web-vitals": "^2.1.0",
+      "vite": "^4.1.4",
       "zustand": "^4.3.3"
    },
    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject",
+      "start": "vite",
+      "build": "vite build",
       "lint": "eslint .",
       "lint:fix": "eslint --fix",
       "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
