--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
    "private": true,
    "dependencies": {
       "@emotion/react": "^11.10.5",
-      "@mantine/core": "^5.10.3",
-      "@mantine/form": "^5.10.4",
-      "@mantine/hooks": "^5.10.3",
-      "@mantine/modals": "^5.10.4",
-      "@mantine/notifications": "^5.10.4",
+      "@mantine/core": "^5.10.5",
+      "@mantine/dates": "^5.10.5",
+      "@mantine/form": "^5.10.5",
+      "@mantine/hooks": "^5.10.5",
+      "@mantine/modals": "^5.10.5",
+      "@mantine/notifications": "^5.10.5",
       "@tabler/icons-react": "^2.3.0",
       "@testing-library/jest-dom": "^5.14.1",
       "@testing-library/react": "^13.0.0",
@@ -19,6 +20,7 @@
       "@types/react-dom": "^18.0.0",
       "@vitejs/plugin-react": "^3.1.0",
       "axios": "^1.3.3",
+      "dayjs": "^1.11.7",
       "jwt-decode": "^3.1.2",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
