--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "jwt-decode": "^3.1.2",
       "moment": "^2.29.4",
       "react": "^18.2.0",
+      "react-csv": "^2.2.2",
       "react-dom": "^18.2.0",
       "react-router-dom": "^6.8.1",
       "swr": "^2.0.3",
@@ -57,6 +58,7 @@
       ]
    },
    "devDependencies": {
+      "@types/react-csv": "^1.1.3",
       "@typescript-eslint/eslint-plugin": "^5.14.0",
       "@typescript-eslint/parser": "^5.14.0",
       "eslint": "^8.10.0",
